# test-task-Suppi

./: README.md  main.py  pyproject.toml  task1.py  task1_output.csv  task2.py  task2_output.csv  task3.py  task3_output.csv  task4_task5_task6.py  task4_task5_task6_output.csv  testovoe_zadanie_with example.txt
