[tool.poetry]
name = "test-task-suppi"
version = "0.1.0"
description = ""
authors = ["TamaraSavadyan <savadyan.tamara@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_suppi"}]

[tool.poetry.dependencies]
python = "^3.10"
Pandas3 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
